Use lazy security performance record for security performance view